Отредактировал сборщик и добавил новые картинки

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/main.css">
   <title>Главная</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -31,7 +32,8 @@
           <li class="first-screen__item"><span>Доступно </span> Цены вас приятно удивят.</li>
           <li class="first-screen__item first-screen__item--2"><span>Качественно</span> Строим по ГОСТу и строго
             придерживаемся современных стандартов.</li>
-          <li class="first-screen__item first-screen__item--3"><span>Точно в срок </span> Сдача объектов всегда во время.
+          <li class="first-screen__item first-screen__item--3"><span>Точно в срок </span> Сдача объектов всегда во
+            время.
             Это прописано в договоре!</li>
         </ul>
 
@@ -46,8 +48,259 @@
       </div><!-- .wrapper -->
     </section>
 
+    <!-- Преимущества -->
+    <section class="features">
+      <div class="wrapper">
+        <h2 class="visually-hidden">Сильные стороны строительной компании Гринстрой</h2>
+
+        <ul class="features__list">
+          <li class="features__item">
+            <p class="features__title"><span>8</span> лет</p>
+            <p class="features__description">Опыт в строительстве коттеджей и многоэтажных домов</p>
+          </li>
+          <li class="features__item">
+            <p class="features__title"><span>40</span> коттеджей</p>
+            <p class="features__description">18 жилых 9-этажных домов построены и введены
+              в эксплуатацию</p>
+          </li>
+        </ul>
+        <a href="#solutions-block" class="button button--white">Подробнее о компании</a>
+      </div>
+    </section>
+
+    <!-- Портфолио -->
+    <section class="portfolio">
+      <div class="wrapper">
+        <h2 class="title">Наши объекты</h2>
+        <ul class="portfolio__list">
+          <li class="portfolio__item">
+            <img class="portfolio__image" src="img/portfolio/1.jpg" alt="фото строительного объекта" width="350"
+              height="197">
+            <div class="portfolio__description">
+              <h3 class="portfolio__name">ЖК Южная звезда</h3>
+              <p class="portfolio__adress">ул. Шоссейная улица, 70/1</p>
+
+
+              <div class="portfolio__links">
+                <a class="button" href="https://grinstroi.ru/zhk-yuzhnaya-zvezda/">Подробнее</a>
+                <span class="portfolio__status portfolio__status--work">
+                  <svg class="portfolio__status-icon" xmlns=" http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 28 28" width="28" height="27">
+                    <defs />
+                    <path
+                      d="M26.946 25.737h-.798V4.08a.799.799 0 00-.642-.783L9.49.105a.8.8 0 00-.955.783v10.429h2.395a2.397 2.397 0 012.395 2.394v13.623h4.789v-3.327a3.997 3.997 0 01-3.193-3.91c0-1.919 1.554-5.588 3.991-5.588 2.437 0 3.99 3.67 3.99 5.588a3.997 3.997 0 01-3.192 3.91v3.327h7.237a.798.798 0 100-1.597zM15.718 9.72h-3.192a.798.798 0 110-1.596h3.192a.798.798 0 110 1.596zm0-3.192h-3.192a.798.798 0 110-1.597h3.192a.798.798 0 110 1.597zm6.386 6.385H18.91a.798.798 0 110-1.596h3.193a.798.798 0 110 1.596zm0-3.193H18.91a.798.798 0 110-1.596h3.193a.798.798 0 110 1.596z" />
+                    <path
+                      d="M21.307 20.097c0-1.576-1.285-3.991-2.395-3.991s-2.394 2.415-2.394 3.99a2.397 2.397 0 002.394 2.395 2.397 2.397 0 002.395-2.394zM10.93 12.913H5.29V7.326a.798.798 0 10-1.597 0v5.587h-.798a.798.798 0 00-.799.798v12.026h-.798a.798.798 0 100 1.597h10.43V13.71a.798.798 0 00-.798-.798zM8.535 24.087H5.289a.798.798 0 110-1.596h3.246a.798.798 0 110 1.596zm0-3.192H5.289a.798.798 0 110-1.596h3.246a.798.798 0 110 1.596zm0-3.193H5.289a.798.798 0 110-1.596h3.246a.798.798 0 110 1.596z" />
+                  </svg>
+                  <span class="portfolio__status-label">Строится</span>
+                </span>
+              </div>
+            </div>
+            <div class="portfolio__labels">
+              <span class="portfolio__label-item"><b>1 очередь</b> все квартиры проданы</span>
+              <span class="portfolio__label-item"><b>2 очередь</b> в продаже</span>
+              <span class="portfolio__label-item  portfolio__label-item--intro"><b>2 км</b> до набережной
+                Краснодара</span>
+            </div>
+
+          </li>
+
+          <li class="portfolio__item">
+            <img class="portfolio__image" src="img/portfolio/2.jpg" alt="фото строительного объекта" width="350"
+              height="197">
+            <div class="portfolio__description">
+              <h3 class="portfolio__name">ЖК Европа</h3>
+              <p class="portfolio__adress">пос. Яблоновский. <br>ул. Гагарина. 158/1</p>
+
+              <div class="portfolio__links">
+                <a class="button">Подробнее</a>
+                <span class="portfolio__status">
+                  <svg class="portfolio__status-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 30 28"
+                    width="27" height="24">
+                    <defs />
+                    <path
+                      d="M28.767 15.067l-3.074-3.096V6.972v-.014a.98.98 0 00-.003-.06l-.003-.032a1.024 1.024 0 00-.009-.059l-.006-.031a.9.9 0 00-.032-.115l-.019-.05c-.005-.014-.012-.027-.018-.04l-.02-.04-.02-.037a.842.842 0 00-.024-.038c-.007-.012-.015-.022-.023-.033l-.029-.039a.979.979 0 00-.192-.182l-.028-.02a.963.963 0 00-.044-.026l-.033-.02-.041-.019-.041-.019-.035-.012c-.016-.006-.033-.013-.05-.018h-.001l-14.54-4.392v-.558a.945.945 0 00-.946-.945H7.051a.945.945 0 00-.944.945v.985L.842 6.228a.945.945 0 00.583 1.689h4.681v12.474L.753 25.808a.945.945 0 00.672 1.609h14.318a.945.945 0 00.643-1.638l-5.904-5.476V7.917h13.322v4.052l-3.096 3.096a.945.945 0 00.668 1.612h6.72a.945.945 0 00.671-1.61zM4.162 6.027l1.945-1.524v1.524H4.162zM6.107 23.08v2.447h-2.42l2.42-2.447zm7.228 2.447H10.48v-2.646l2.854 2.646zm-2.854-19.5V3.65l7.872 2.377H10.48zm13.176 8.76l1.09-1.088 1.08 1.089h-2.17z" />
+                  </svg>
+                  <span class="portfolio__status-label">Введен в эксплуатацию</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="portfolio__labels">
+              <span class="portfolio__label-item"><b>Все квартиры проданы</b></span>
+
+            </div>
+          </li>
+
+          <li class="portfolio__item">
+            <img class="portfolio__image" src="img/portfolio/3.jpg" alt="фото строительного объекта" width="350"
+              height="197">
+            <div class="portfolio__description">
+              <h3 class="portfolio__name">Котеджный поселок Золотая роща</h3>
+              <p class="portfolio__adress">пос. Яблоновский</p>
+              <div class="portfolio__links">
+                <a class="button">Подробнее</a>
+                <span class="portfolio__status">
+                  <svg class="portfolio__status-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 30 28"
+                    width="27" height="24">
+                    <defs />
+                    <path
+                      d="M28.767 15.067l-3.074-3.096V6.972v-.014a.98.98 0 00-.003-.06l-.003-.032a1.024 1.024 0 00-.009-.059l-.006-.031a.9.9 0 00-.032-.115l-.019-.05c-.005-.014-.012-.027-.018-.04l-.02-.04-.02-.037a.842.842 0 00-.024-.038c-.007-.012-.015-.022-.023-.033l-.029-.039a.979.979 0 00-.192-.182l-.028-.02a.963.963 0 00-.044-.026l-.033-.02-.041-.019-.041-.019-.035-.012c-.016-.006-.033-.013-.05-.018h-.001l-14.54-4.392v-.558a.945.945 0 00-.946-.945H7.051a.945.945 0 00-.944.945v.985L.842 6.228a.945.945 0 00.583 1.689h4.681v12.474L.753 25.808a.945.945 0 00.672 1.609h14.318a.945.945 0 00.643-1.638l-5.904-5.476V7.917h13.322v4.052l-3.096 3.096a.945.945 0 00.668 1.612h6.72a.945.945 0 00.671-1.61zM4.162 6.027l1.945-1.524v1.524H4.162zM6.107 23.08v2.447h-2.42l2.42-2.447zm7.228 2.447H10.48v-2.646l2.854 2.646zm-2.854-19.5V3.65l7.872 2.377H10.48zm13.176 8.76l1.09-1.088 1.08 1.089h-2.17z" />
+                  </svg>
+                  <span class="portfolio__status-label">Введен в эксплуатацию</span>
+                </span>
+              </div>
+            </div>
+            <div class="portfolio__labels">
+              <span class="portfolio__label-item"><b>Все квартиры проданы</b></span>
+            </div>
+          </li>
+        </ul>
+
+      </div>
+    </section>
+
+    <!-- актуальный проект  -->
+    <section class="priority-project">
+      <div class="wrapper priority-project__wrapper">
+
+        <div class="priority-project__header">
+
+          <div class="priority-project__description">
+            <h2 class="title title--two">ЖК Южная звезда<br>
+              Старт продаж 2 очереди</h2>
+
+            <ul class="priority-project__list">
+              <li class="priority-project__item">
+                <span class="priority-project__title">2км</span>
+                <p class="priority-project__text">до Краснодара
+                  и набережной
+                  Без пробок</p>
+              </li>
+              <li class="priority-project__item">
+                <span class="priority-project__title">24-60</span>
+                <p class="priority-project__text">кв.метров –
+                  квартиры</p>
+              </li>
+              <li class="priority-project__item">
+                <span class="priority-project__title">от 6%</span>
+                <p class="priority-project__text">ипотека</p>
+              </li>
+              <li class="priority-project__item">
+                <span class="priority-project__title">Online</span>
+                <p class="priority-project__text">Нет возможности приехать в Краснодар?
+                  Проведем дистанционный показ квартиры.</p>
+              </li>
+            </ul>
+
+          </div>
+
+          <div class="priority-project__video">
+            <img class="priority-project__preview" src="img/video-preview/1.jpg" alt="видео превью" width="540"
+              height="354">
+            <button class="priority-project__button" type="button">
+              <img class="priority-project__icon" src="img/icons/play.svg" alt="конка кнопки видео" width="55" height="55">
+            </button>
+          </div><!-- .priority-project__video -->
+
+        </div><!-- .priority-project__header -->
+      </div><!-- .wrapper -->
+
+      <div class="priority-project__slider">
+        <div class="wrapper">
+          <!-- Slider main container -->
+          <div class="swiper-container">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/1.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/2.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/3.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/4.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/5.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/6.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/7.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+              <li class="swiper-slide">
+                <a class="swiper-slide__link">
+                  <img src="img/slider/8.jpg" alt="" class="swiper-slide__image" width="371" height="248">
+                </a>
+              </li>
+            </ul>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+          </div> <!-- swiper-container -->
+        </div>
+      </div> <!-- .priority-project__slider -->
+      <div class="wrapper">
+        <div class="priority-project__footer">
+          <a href="" class="button button--transparent">Подробнее</a>
+          <p class="priority-project__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eaque sunt
+            placeat delectus,
+            at ex suscipit mollitia ipsa deleniti labore aliquid eos maiores incidunt provident a distinctio quas eius
+            hic?
+          </p>
+        </div>
+
+      </div> <!-- wrapper -->
+    </section>
+
 
   </main>
+  <!-- скрипты подключаемые на страницу (перед /body ) -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="js/main.js"></script>
+
+  <script>
+    /* Прогресс бар в шапке сайта */
+    var progress = document.querySelector('.progress-bar');
+
+    window.addEventListener('scroll', progressBar);
+
+    function progressBar(e) {
+      var windowScroll = document.body.scrollTop || document.documentElement.scrollTop;
+      var windowHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+      var result = windowScroll / windowHeight * 100;
+
+      progress.style.width = result + '%';
+    }
+
+    window.addEventListener("scroll", function () {
+      var header = document.querySelector("header");
+      header.classList.toggle("sticky", window.scrollY > 0);
+    });
+  </script>
 </body>
 
 </html>
