Исправил ошибки валидации

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,8 +24,8 @@
 
         <p class="first-screen__subtitle">Переезжайте на юг</p>
 
-        <h2 class="first-screen__title">Строим теплые и&#160надёжные&#160дома по&#160;214-ФЗ.<br>
-          <span>Продажа квартир от&#160;1,2&#160;млн.&#160;руб</span>
+        <h2 class="first-screen__title">Строим теплые и&nbsp;надёжные дома по&nbsp;214-ФЗ.<br>
+          <span>Продажа квартир от&nbsp;1,2&nbsp;млн. руб</span>
         </h2>
 
         <ul class="first-screen__list">
@@ -84,14 +84,8 @@
               <div class="portfolio__links">
                 <a class="button" href="https://grinstroi.ru/zhk-yuzhnaya-zvezda/">Подробнее</a>
                 <span class="portfolio__status portfolio__status--work">
-                  <svg class="portfolio__status-icon" xmlns=" http://www.w3.org/2000/svg" fill="none"
-                    viewBox="0 0 28 28" width="28" height="27">
-                    <defs />
-                    <path
-                      d="M26.946 25.737h-.798V4.08a.799.799 0 00-.642-.783L9.49.105a.8.8 0 00-.955.783v10.429h2.395a2.397 2.397 0 012.395 2.394v13.623h4.789v-3.327a3.997 3.997 0 01-3.193-3.91c0-1.919 1.554-5.588 3.991-5.588 2.437 0 3.99 3.67 3.99 5.588a3.997 3.997 0 01-3.192 3.91v3.327h7.237a.798.798 0 100-1.597zM15.718 9.72h-3.192a.798.798 0 110-1.596h3.192a.798.798 0 110 1.596zm0-3.192h-3.192a.798.798 0 110-1.597h3.192a.798.798 0 110 1.597zm6.386 6.385H18.91a.798.798 0 110-1.596h3.193a.798.798 0 110 1.596zm0-3.193H18.91a.798.798 0 110-1.596h3.193a.798.798 0 110 1.596z" />
-                    <path
-                      d="M21.307 20.097c0-1.576-1.285-3.991-2.395-3.991s-2.394 2.415-2.394 3.99a2.397 2.397 0 002.394 2.395 2.397 2.397 0 002.395-2.394zM10.93 12.913H5.29V7.326a.798.798 0 10-1.597 0v5.587h-.798a.798.798 0 00-.799.798v12.026h-.798a.798.798 0 100 1.597h10.43V13.71a.798.798 0 00-.798-.798zM8.535 24.087H5.289a.798.798 0 110-1.596h3.246a.798.798 0 110 1.596zm0-3.192H5.289a.798.798 0 110-1.596h3.246a.798.798 0 110 1.596zm0-3.193H5.289a.798.798 0 110-1.596h3.246a.798.798 0 110 1.596z" />
-                  </svg>
+                  <img src="img/icons/building-crane.svg" alt="конка строительного крана" class="portfolio__status-icon"
+                    width="28" height="27">
                   <span class="portfolio__status-label">Строится</span>
                 </span>
               </div>
@@ -115,12 +109,8 @@
               <div class="portfolio__links">
                 <a class="button">Подробнее</a>
                 <span class="portfolio__status">
-                  <svg class="portfolio__status-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 30 28"
-                    width="27" height="24">
-                    <defs />
-                    <path
-                      d="M28.767 15.067l-3.074-3.096V6.972v-.014a.98.98 0 00-.003-.06l-.003-.032a1.024 1.024 0 00-.009-.059l-.006-.031a.9.9 0 00-.032-.115l-.019-.05c-.005-.014-.012-.027-.018-.04l-.02-.04-.02-.037a.842.842 0 00-.024-.038c-.007-.012-.015-.022-.023-.033l-.029-.039a.979.979 0 00-.192-.182l-.028-.02a.963.963 0 00-.044-.026l-.033-.02-.041-.019-.041-.019-.035-.012c-.016-.006-.033-.013-.05-.018h-.001l-14.54-4.392v-.558a.945.945 0 00-.946-.945H7.051a.945.945 0 00-.944.945v.985L.842 6.228a.945.945 0 00.583 1.689h4.681v12.474L.753 25.808a.945.945 0 00.672 1.609h14.318a.945.945 0 00.643-1.638l-5.904-5.476V7.917h13.322v4.052l-3.096 3.096a.945.945 0 00.668 1.612h6.72a.945.945 0 00.671-1.61zM4.162 6.027l1.945-1.524v1.524H4.162zM6.107 23.08v2.447h-2.42l2.42-2.447zm7.228 2.447H10.48v-2.646l2.854 2.646zm-2.854-19.5V3.65l7.872 2.377H10.48zm13.176 8.76l1.09-1.088 1.08 1.089h-2.17z" />
-                  </svg>
+                  <img src="img/icons/city.svg" alt="конка строительного крана" class="portfolio__status-icon"
+                    width="27" height="27">
                   <span class="portfolio__status-label">Введен в эксплуатацию</span>
                 </span>
               </div>
@@ -141,12 +131,8 @@
               <div class="portfolio__links">
                 <a class="button">Подробнее</a>
                 <span class="portfolio__status">
-                  <svg class="portfolio__status-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 30 28"
-                    width="27" height="24">
-                    <defs />
-                    <path
-                      d="M28.767 15.067l-3.074-3.096V6.972v-.014a.98.98 0 00-.003-.06l-.003-.032a1.024 1.024 0 00-.009-.059l-.006-.031a.9.9 0 00-.032-.115l-.019-.05c-.005-.014-.012-.027-.018-.04l-.02-.04-.02-.037a.842.842 0 00-.024-.038c-.007-.012-.015-.022-.023-.033l-.029-.039a.979.979 0 00-.192-.182l-.028-.02a.963.963 0 00-.044-.026l-.033-.02-.041-.019-.041-.019-.035-.012c-.016-.006-.033-.013-.05-.018h-.001l-14.54-4.392v-.558a.945.945 0 00-.946-.945H7.051a.945.945 0 00-.944.945v.985L.842 6.228a.945.945 0 00.583 1.689h4.681v12.474L.753 25.808a.945.945 0 00.672 1.609h14.318a.945.945 0 00.643-1.638l-5.904-5.476V7.917h13.322v4.052l-3.096 3.096a.945.945 0 00.668 1.612h6.72a.945.945 0 00.671-1.61zM4.162 6.027l1.945-1.524v1.524H4.162zM6.107 23.08v2.447h-2.42l2.42-2.447zm7.228 2.447H10.48v-2.646l2.854 2.646zm-2.854-19.5V3.65l7.872 2.377H10.48zm13.176 8.76l1.09-1.088 1.08 1.089h-2.17z" />
-                  </svg>
+                  <img src="img/icons/city.svg" alt="конка строительного крана" class="portfolio__status-icon"
+                    width="27" height="27">
                   <span class="portfolio__status-label">Введен в эксплуатацию</span>
                 </span>
               </div>
@@ -199,7 +185,8 @@
             <img class="priority-project__preview" src="img/video-preview/1.jpg" alt="видео превью" width="540"
               height="354">
             <button class="priority-project__button" type="button">
-              <img class="priority-project__icon" src="img/icons/play.svg" alt="конка кнопки видео" width="55" height="55">
+              <img class="priority-project__icon" src="img/icons/play.svg" alt="конка кнопки видео" width="55"
+                height="55">
             </button>
           </div><!-- .priority-project__video -->
 
@@ -300,6 +287,7 @@
       var header = document.querySelector("header");
       header.classList.toggle("sticky", window.scrollY > 0);
     });
+
   </script>
 </body>
 
