Закончил адаптив блока руководителя

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -262,6 +262,81 @@
 
       </div> <!-- wrapper -->
     </section>
+    <!-- Блок директора -->
+    <section class="tech-const">
+      <div class="wrapper">
+
+        <div class="tech-const__header">
+          <h2 class="title">Технологии строительства</h2>
+          <blockquote class="words-leader">
+            <p class="words-leader__text">Здравствуйте, уважаемые клиенты, жители Краснодара, Адыгеи, Москвы,
+              Хабаровска и других регионов России и СНГ. Благодарим Вас за доверие к нашей компании.</p>
+
+            <div class="words-leader__wrapper">
+
+              <picture>
+                <source srcset="img/team/director-180.jpg" media="(max-width: 970px)">
+                <source srcset="img/team/director-100.jpg" media="(max-width: 670px)">
+                <source srcset="img/team/director.jpg">
+                <img class="words-leader__photo" srcset="img/team/director.jpg" alt="Фотография директора строительной компании Гринстрой">
+              </picture>
+
+              <cite class="words-leader__name">Руководитель <br>компании «ГринСтрой» <br>ФИО</cite>
+            </div>
+
+          </blockquote>
+        </div>
+
+        <div class="tech-const__list">
+          <ul class="const-list">
+            <li class="const-list__item">
+              <img src="img/icons/const-1.svg" alt="" class="const-list__icon" width="38" height="35">
+              <span class="const-list__title">Экологичное строительство</span>
+              Все квартиры в ЖК «Европа» и коттеджи «Золотая роща» проданы.
+              Мы учли ваши пожелания. ЖК «Южная Звезда» построили
+              в Яблоновском, <b>возле хорошей асфальтированной дороги.</b> Не нужно ждать, когда достроятся 7
+              девятиэтажных
+              домов и благоустроится двор.<br>
+              При этом <b>до основных трасс в Краснодар – 1 км,</b> до Тургеневского шоссе и ул. Захарова с Яблоновским
+              мостом.
+              Вам не придется дышать выхлопными газами многополосных трасс, через которые весь Краснодар едет на отдых к
+              морю и вся Адыгея - в Краснодар на работу.</li>
+            <li class="const-list__item">
+              <img src="img/icons/const-2.svg" alt="" class="const-list__icon" width="50" height="38">
+              <span class="const-list__title">Центральные коммуникации</span>
+              В квартирах – канализация, а не септики. Район не затапливается</li>
+            <li class="const-list__item">
+              <img src="img/icons/const-3.svg" alt="" class="const-list__icon" width="45" height="45">
+              <span class="const-list__title">Теплые дома и низкие коммунальные платежи</span>
+              Наружный утеплитель<br>
+              Автономное отопление, низкие коммунальные платежи,<br>
+              <b>от 1800 руб/мес.</b>
+              <a class="link" href="">Подробнее</a>
+            </li>
+            <li class="const-list__item">
+              <img src="img/icons/const-4.svg" alt="" class="const-list__icon" width="45" height="45">
+              <span class="const-list__title">Геодезический анализ и монолитное строительство</span>
+              <ul>
+                <li>Надежные дома,</li>
+                <li>Быстрое монолитно-каркасное строительство,</li>
+                <li>Возможность перепланировки за счет отсутствия внутренних несущих стен.</li>
+              </ul>
+            </li>
+            <li class="const-list__item">
+              <img src="img/icons/const-5.svg" alt="" class="const-list__icon" width="44" height="43">
+              <span class="const-list__title">Жизнь без шума перфораторов</span>
+              Сдаем квартиры с предчистовой отделкой. Большинство шумных
+              и грязных строительных работ выполнено. Осталось поклеить обои, выбрать мебель.</li>
+            <li class="const-list__item">
+              <img src="img/icons/const-6.svg" alt="" class="const-list__icon" width="49" height="40">
+              <span class="const-list__title">Озеленение</span>
+              Вы живете в экологически чистом районе, вдали от производства. Всего в 2 км от Краснодара и набережной. Мы
+              озеленяем территорию комплекса. И продолжим озеленять ее южными растениями.</li>
+          </ul>
+        </div><!-- .tech-const__list -->
+
+      </div><!-- .wrapper -->
+    </section>
 
 
   </main>
