добавил скругления у некоторых блоков на странице

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -253,7 +253,8 @@
       <div class="wrapper">
         <div class="priority-project__footer">
           <a href="" class="button button--transparent">Подробнее</a>
-          <p class="priority-project__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eaque sunt
+          <p class="priority-project__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eaque
+            sunt
             placeat delectus,
             at ex suscipit mollitia ipsa deleniti labore aliquid eos maiores incidunt provident a distinctio quas eius
             hic?
