Добавил новые секции на лендинг

--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -23,7 +23,7 @@
         <p class="first-screen__subtitle">Новая страница вашей&#160;жизни <span>в&#160;ЖК&#160;Южная&#160;Звезда </span>
         </p>
 
-        <h2 class="first-screen__title">Продажа квартир с&#160;индивидуальным отоплением
+        <h2 class="first-screen__title">Продажа квартир с индивидуальным отоплением
           <span>от&#160;1&#160;млн&#160;рублей</span>
         </h2>
 
@@ -50,6 +50,94 @@
         </div>
 
       </div><!-- .wrapper -->
+    </section>
+
+    <section class="features features--landing">
+      <div class="wrapper">
+        <h2 class="visually-hidden">Преимущества и особенности жилого комплекса</h2>
+        <ul class="features__list">
+          <li><img src="img/icons/advantages-1.svg" alt="Иконка преимущества">
+            <p><span>Квартиры с улучшенной планировкой</span> Мы сделали планировки квартир с учетом всех современных
+              требований</p>
+          </li>
+          <li><img src="img/icons/advantages-2.svg" alt="Иконка преимущества">
+            <p><span>Образовательные учреждения</span> ЖК находится в зоне обслуживания образовательного центра на 1100
+              детей</p>
+          </li>
+          <li><img src="img/icons/advantages-3.svg" alt="Иконка преимущества">
+            <p><span>Индивидуальное отопление</span> Вы можете регулировать тепло в своей квартире самостоятельно</p>
+          </li>
+          <li><img src="img/icons/advantages-4.svg" alt="Иконка преимущества">
+            <p><span>Закрытая территория</span> Доступ на территорию комплекса будет разрешен только жильцам. Также во
+              дворе расположены парковочные места.</p>
+          </li>
+          <li><img src="img/icons/advantages-5.svg" alt="Иконка преимущества">
+            <p><span>Монолит-кирпич</span> Высокая прочность, долговечность и малая усадка здания</p>
+          </li>
+          <li><img src="img/icons/advantages-6.svg" alt="Иконка преимущества">
+            <p><span>Экологически чистый район</span> Вы будете жить в нескольких сотнях метров от реки Кубань</p>
+          </li>
+        </ul>
+        <a href="#solutions-block" class="button button--green">Смотреть все планировки</a>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="wrapper">
+        <div class="about__wrapper">
+          <div class="about__description">
+            <h2 class="title">О жилом комплексе Южная&#160;Звезда</h2>
+            <div class="about__text">
+              <p class="about__accent-text">ГРИНСТРОЙ – строительная компания, на протяжении 8 лет занимающаяся строительством
+                жилья
+                и коммерческих помещений на территории Тахтамукайского района Республики Адыгея. В том числе, нами
+                построены и успешно реализованы 2 проекта жилой недвижимости: жилой комплекс «Европа» в центре поселка
+                Яблоновский по ул. Гагарина и коттеджный поселок «Золотая Роща» в восточной части поселка Яблоновский.
+              </p>
+              <p>В настоящее время компанией ГРИНСТРОЙ реализуется новый проект жилой комплекс «Южная Звезда», состоящий
+                из 7 девятиэтажных домов на 750 квартир класса «Эконом» для молодых семей с детьми. Объект находится в
+                центре поселка Яблоновский, по ул. Шоссейная 70/1.</p>
+              <p>На 1-ом этаже первого литера уже открылся супермаркет ПЯТЁРОЧКА. В шаговой доступности от ЖК уже
+                функционируют супермаркет «Магнит» и магазин «Магнит Косметик», кафе, аптека, автомойка, многочисленные
+                специализированные магазины.</p>
+              <p>ЖК Южная звезда – одна из последних возможностей купить квартиру в новостройке в центральной части
+                поселка Яблоновский. Удобное расположение ЖК позволяет за 15 минут, добраться до центра Краснодара как
+                через Яблоновский, так и через Тургеневский мост. В пяти минутах езды от ЖК находятся торговые центры
+                МЕГА, IKEA, Столплитхоум, Декатлон, Монорама, Ашан, Леруа Мерлен, а также единственный в Краснодаре
+                аквапарк.</p>
+              <p>Жители нашего ЖК имеют возможность устроить своих детей в одно из лучших учебных заведений Республики
+                Адыгея – Образовательный центр на 1100 детей, включающий в себя среднеобразовательную школу и детский
+                сад.</p>
+              <p>Остановка общественного транспорта для жителей ЖК будет располагаться в непосредственной близости от
+                литера 1, прямо возле входа в магазин Пятерочка.</p>
+              <p>Разумная цена, удачные планировки, качество используемых материалов, строгое соблюдение сроков
+                строительства – принципы, которых придерживается компания ГРИНСТРОЙ при реализации всех своих проектов.
+              </p>
+            </div>
+            <div class="video-button">
+              <p>Смотреть видео-ролик про ЖК Южная Звезда</p>
+              <button class="button button--play" type="button">
+                <img src="img/icons/play.svg" alt="конка кнопки видео" width="55"
+                  height="55">
+              </button>
+            </div>
+          </div>
+          <div class="about__data">
+            <img src="img/logo/logo_uz.svg" alt="Логотип ЖК Южная Звезда">
+            <ul class="about__data-list list">
+              <li><span>7</span>
+                <p>литеров в ЖК</p>
+              </li>
+              <li><span>9</span>
+                <p>этажей в каждом литере</p>
+              </li>
+              <li><span>750</span>
+                <p>квартир</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
 
 
